# invoice-automation

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: AI_CONCEPTS.md  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLE_WALKTHROUGH.md  FRAPPE_BASICS.md  GLOSSARY.md  PERMISSIONS.md  SETUP_GUIDE.md  SYSTEM_FLOW.md  TECHNICAL.md  USER_GUIDE.md
invoice_automation/: hooks.py  modules.txt  setup.py
invoice_automation/api/: endpoints.py
invoice_automation/embeddings/: index_builder.py  index_manager.py  model.py
invoice_automation/extraction/: base_extractor.py  extraction_service.py  file_handler.py  json_extractor.py  json_repair.py  ollama_client.py  prompt_templates.py  schema.py
invoice_automation/extraction/normalizers/: currency_normalizer.py  date_normalizer.py  decimal_normalizer.py  line_item_normalizer.py  tax_id_normalizer.py  text_normalizer.py
invoice_automation/extraction/parsers/: base_parser.py  doc_parser.py  docx_parser.py  fallback_parser.py  image_parser.py  pdf_parser.py
invoice_automation/extraction/validators/: validation_service.py
invoice_automation/invoice_automation/doctype/embedding_index/: embedding_index.json  embedding_index.py  test_embedding_index.py
invoice_automation/invoice_automation/doctype/extraction_field/: extraction_field.json  extraction_field.py
invoice_automation/invoice_automation/doctype/invoice_automation_settings/: invoice_automation_settings.js  invoice_automation_settings.json  invoice_automation_settings.py  (+1 more)
invoice_automation/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
invoice_automation/matching/: alias_matcher.py  base_strategy.py  confidence.py  embedding_matcher.py  exact_matcher.py  fuzzy_matcher.py  hsn_filter.py  llm_matcher.py  normalizer.py  pipeline.py  price_validator.py  purchase_history_matcher.py  vendor_sku_matcher.py
invoice_automation/memory/: alias_manager.py  conflict_resolver.py  correction_handler.py  reasoning_retriever.py
invoice_automation/public/css/: invoice_review.css
invoice_automation/tests/: test_extraction.py  test_matching.py  test_normalizer.py  test_validation.py
invoice_automation/utils/: decimal_utils.py  exceptions.py  file_utils.py  helpers.py  redis_index.py
invoice_automation/validation/: amount_validator.py  duplicate_detector.py  tax_validator.py
(+23 files in other folders)
