[project]
name = "invoice_automation"
authors = [
    { name = "venkatsh@aerele.in", email = "venkatsh@aerele.in"}
]
description = "Invoice Automation"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
    "thefuzz[speedup]>=0.20.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "llama-index>=0.10.0",
    "llama-parse>=0.4.0",
    "python-docx>=1.0.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    # LLM providers — install only what you need:
    #   Ollama: no extra package (uses httpx)
    #   Anthropic: anthropic
    #   OpenAI: openai
    #   Gemini: google-genai
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
